--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Clean Blog
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "https://github.com/ty2ty/ty2ty.github.io"
+baseurl:            "https:ty2ty.github.io"
 url:                "https://ty2ty.github.io"
 
 # Social Profiles
